<resources>
    <string name="app_name">TECH POST</string>
    <string name="loginScreenHeader">Nickname</string>
    <string name="loginScreenButtonText">Create Profile</string>
    <string name="loginScreenText">Don\'t have nickname? Next</string>
    <string name="project_name">USTH PROJECT</string>
    <string name="project_copyright">\@USTHCOPYRIGHT</string>
    <string name="content_description">Avoid Warning</string>
    <string name="apple_company">Apple Company</string>
    <string name="apple_watch_series10_description">Introducing Apple Watch Series 10 | Apple</string>
    <string name="airpods4_description">Introducing the all-new AirPods 4 | Apple</string>
    <string name="iphone16_pro_description">Introducing iPhone 16 Pro | Apple</string>
    <string name="ipad_pro_description">Introducing the all-new iPad Pro | Apple</string>
    <string name="videos">Videos</string>
    <string name="news">News</string>
    <string name="video_part_title">TECH VIDEOS</string>
    <string name="news_part_title">TECH NEWS</string>
    <string name="save_part_title">SAVE</string>
    <string name="search_hint_light">Search (Light Mode)</string>
    <string name="search_hint_dark">Search (Dark Mode)</string>
    <string name="profile_description">Profile Image</string>
    <string name="logo_description">Logo</string>
    <string name="main_logo">Main Logo Of The App</string>
    <string name="setting">Setting</string>
    <string name="change_username">Change Username/Avatar</string>
    <string name="language">Language</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="English">English</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="Font_Size">Font Size</string>
    <string name="Small">Small</string>
    <string name="Medium">Medium</string>
    <string name="Large">Large</string>
    <string name="Developer">Developer</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="choice_question">Which technology companies are you interested in?</string>
    <string name="all">All</string>
    <string name="apple">Apple</string>
    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="asus">Asus</string>
    <string name="huawei">Huawei</string>
    <string name="microsoft">Microsoft</string>
    <string name="delete_history">Delete History</string>
    <string name="search">Search</string>
    <string name="newest">Newest</string>
    <string name="hot">Hot</string>
    <string name="old_posts">Old Posts</string>
    <string name="trends">Trends</string>
    <string name="history">History</string>
    <string name="no_result">No results</string>
    <string name="title_activity_scrolling_news">ScrollingNewsActivity</string>
    <string name="large_text">







        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="large_text_2">
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
recusandae alias error harum maxime adipisci amet laborum. Perspiciatis
minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit
quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur
fugiat, temporibus enim commodi iusto libero magni deleniti quod quam
consequuntur! Commodi minima excepturi repudiandae velit hic maxime
doloremque. Quaerat provident commodi consectetur veniam similique ad
earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo
fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore
suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium
modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam
totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam
quasi aliquam eligendi, placeat qui corporis!</string>
    <string name="small_new_image_desc">The main image for the small (overview) articles.</string>
    <string name="comment_image_desc">Comment Image</string>
    <string name="default_title">Default Title</string>
    <string name="default_date">Mon, Jan 1st 2018</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registerBtn">Don\'t have an account? Register here.</string>
    <string name="loginBtn">Already have an account? Login here.</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="sendEmail">Send Email</string>
</resources>