<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authpackage.LoginActivity">

    <TextView
        android:id="@+id/headText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headText"
        android:textSize="20sp"
        android:text="@string/enter_your_email" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bodyText"
        android:layout_marginTop="16dp"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"/>

    <Button
        android:id="@+id/sendEmailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:text="@string/sendEmail"/>

</RelativeLayout>