<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    tools:context=".SmallNewsFragment">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/small_new_image_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newsShortTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_title"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/large_text_2"
            android:textSize="11sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/commentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="25dp"
                android:maxHeight="25dp"
                android:src="@drawable/comment_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/comment_image_desc" />

            <TextView
                android:id="@+id/commentNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/commentImage"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/newsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>