<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SetNicknameFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SetNicknameFragment">

    <TextView
        android:padding="10dp"
        android:id="@+id/loginScreenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginScreenHeader"
        android:textSize="25sp"/>

    <EditText
        android:layout_margin="15dp"
        android:padding="10dp"
        android:id="@+id/textInput"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:inputType="text"
        android:background="@drawable/round_corner"
        android:autofillHints="Username..."/>

    <Button
        android:id="@+id/loginScreenButton"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginScreenButtonText"
        android:labelFor="@id/textInput"/>

    <TextView
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginScreenText"/>

</LinearLayout>