<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ChooseFavorFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseFavorFragment">

<!--  Set the back button  -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

<!--  Set the next button  -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

<!--   Replace this image with the main logo     -->
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/tomato_logo"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"/>

        <TextView
            android:id="@+id/choice_question"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_question"
            android:textSize="25sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/videos"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <GridLayout
            android:id="@+id/brand_container_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:columnCount="3">

            <!--      Apple logo          -->
            <ImageView
                android:id="@+id/apple_logo_video"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/apple_logo"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"/>

            <!--        Samsung logo        -->
            <ImageView
                android:id="@+id/samsung_logo_video"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:src="@drawable/samsung_logo"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <!--        Xiaomi logo        -->
            <ImageView
                android:id="@+id/xiaomi_logo_video"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/xiaomi_logo"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/asus_logo_video"
                android:contentDescription="@string/logo_description"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/asus_logo"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/huawei_logo_video"
                android:contentDescription="@string/logo_description"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@drawable/huawei_logo"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/microsoft_logo_video"
                android:contentDescription="@string/logo_description"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@drawable/microsoft_logo"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:padding="5dp"/>

        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:text="@string/news"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <GridLayout
            android:id="@+id/brand_container_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:columnCount="3">

            <!--      Apple logo          -->
            <ImageView
                android:id="@+id/apple_logo_news"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/apple_logo"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"/>

            <!--        Samsung logo        -->
            <ImageView
                android:id="@+id/samsung_logo_news"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@drawable/samsung_logo"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"/>

            <!--        Xiaomi logo        -->
            <ImageView
                android:id="@+id/xiaomi_logo_news"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/xiaomi_logo"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/asus_logo_news"
                android:contentDescription="@string/logo_description"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/asus_logo"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/huawei_logo_news"
                android:contentDescription="@string/logo_description"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@drawable/huawei_logo"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/microsoft_logo_news"
                android:contentDescription="@string/logo_description"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@drawable/microsoft_logo"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:padding="5dp"/>

        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>